.gitignore : Ignore model feature file types

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ Accessing SPICE on Chipshub.pdf
 EE598_CEN598-ASU-VLSI-Design-Automation-MiniProject2.pdf
 Phase1 Description.pdf
 
+*.vmap
+*.imap
+*.irdrop
+*.pdn
+*.voltage
+
 #Ignore VS Code files
 .DS_Store
 
